--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,7 +18,8 @@ body {
   font-family: Roboto;
   font-style: normal;
   color: #000000;
-  background: #F2F6F8;
+  /*background: #F2F6F8;*/
+  background: green;
 }
 
 h2 {
@@ -64,6 +65,10 @@ p {
           clip-path: inset(50%);
 }
 
+:root {
+  --swiper-navigation-size: 30px !important;
+}
+
 /*Хедер*/
 header {
   display: -webkit-box;
@@ -100,8 +105,9 @@ header {
   transition: all 0.3s;
 }
 
-.logo-block img {
-  width: auto;
+.logo-block__link img {
+  width: 100%;
+  max-width: 210px;
 }
 
 .head-block {
@@ -130,8 +136,9 @@ header {
 }
 
 .head-block__list {
+  border: 1px solid red;
   width: 100%;
-  max-width: 990px;
+  max-width: 1160px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -144,6 +151,11 @@ header {
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
+}
+
+.swiper.head-block__list {
+  margin-left: inherit;
+  margin-right: inherit;
 }
 
 .head-block__text {
@@ -176,6 +188,7 @@ header {
 }
 
 .head-block__contacts {
+  border: 1px solid red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2657,14 +2670,10 @@ input[type=range]:focus::-ms-fill-upper {
   main {
     width: calc(100% - 350px);
   }
-
-  .head-block__list {
-    max-width: 980px;
-  }
 }
 @media (max-width: 1699px) {
   .head-block__list {
-    max-width: 885px;
+    max-width: 990px;
   }
 
   .my-deputat__item {
@@ -2731,7 +2740,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 @media (max-width: 1599px) {
   .head-block__list {
-    max-width: 785px;
+    max-width: 910px;
   }
 
   .main-slider {
@@ -2760,7 +2769,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 @media (max-width: 1499px) {
   .head-block__list {
-    max-width: 686px;
+    max-width: 830px;
   }
 
   .head-block__image {
@@ -2821,8 +2830,16 @@ input[type=range]:focus::-ms-fill-upper {
     width: 300px;
   }
 
-  .logo-block img {
-    width: 220px;
+  .head-block__list {
+    max-width: 791px;
+  }
+
+  .logo-block__link img {
+    width: 160px;
+  }
+
+  .logo-block__image {
+    width: 60px;
   }
 
   .head-block {
@@ -2851,10 +2868,6 @@ input[type=range]:focus::-ms-fill-upper {
 
   .left-side__contacts {
     width: 270px;
-  }
-
-  .head-block__list {
-    max-width: 655px;
   }
 
   .head-block__image {
@@ -2956,12 +2969,16 @@ input[type=range]:focus::-ms-fill-upper {
   }
 }
 @media (max-width: 1199px) {
-  .logo-block img {
-    width: 160px;
-  }
-
   .logo-block {
     width: 220px;
+  }
+
+  .logo-block__link img {
+    width: 130px;
+  }
+
+  .logo-block__image {
+    width: 45px;
   }
 
   .head-block {
@@ -3285,6 +3302,14 @@ input[type=range]:focus::-ms-fill-upper {
   }
 }
 @media (max-width: 1024px) {
+  .logo-block {
+    width: 210px;
+  }
+
+  .head-block {
+    width: calc(100% - 210px);
+  }
+
   .menu__arrow {
     display: block;
     position: absolute;
@@ -3328,18 +3353,6 @@ input[type=range]:focus::-ms-fill-upper {
     -webkit-transform: rotate(0deg);
         -ms-transform: rotate(0deg);
             transform: rotate(0deg);
-  }
-
-  .logo-block {
-    width: 170px;
-  }
-
-  .head-block {
-    width: calc(100% - 170px);
-  }
-
-  .logo-block img {
-    width: 140px;
   }
 
   .site-body {
@@ -3408,19 +3421,19 @@ input[type=range]:focus::-ms-fill-upper {
   }
 
   .logo-block {
-    width: 120px;
-  }
-
-  .logo-block img {
-    width: 100px;
+    width: 190px;
   }
 
   .head-block {
-    width: calc(100% - 100px);
+    width: calc(100% - 190px);
   }
 
-  .head-block__image {
-    display: none;
+  .logo-block__link img {
+    width: 130px;
+  }
+
+  .logo-block__image {
+    width: 40px;
   }
 
   .head-block__list {
